--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+    <head>
+		<meta charset="utf-8">
+        <title>WestCraft15 (HOME)</title>
+    </head>
+    <body>
+        <h1>WestCraft15.github.io</h1>
+        <p>Welcome. You're probably looking for the <a href="keyhunt/keyhunt.html">Scoutdigo Key Guide</a>.</p>
+    </body>
 </html>
