--- a/keyhunt/keyhunt.html
+++ b/keyhunt/keyhunt.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="keyhunt.css">
 		<title>what are you running from?</title>
+  		<link rel="icon" type="image/x-icon" href="assets/favicon.png">
 	</head>
 
 	<body>
@@ -14,7 +15,21 @@
 		<p>You will probably have issues, and that's okay!</p>
 		<p>Struggling is part of the learning process.</p>
 		<p>However, to expedite that process I have included a help section, found <a href="help.html">here</a>.</p>
-		<p>Please, <strong><big><span style="color: red">please</span></big></strong> read it before asking questions. The answer is probably there.</p>
+		<p>Please, <span style="color: red; font-weight: 600; font-size: 150%; font-style: italic">please</span> read it before asking questions. The answer is probably there.</p>
 		<p>Now, without further ado, the updated guide:</p>
+		<ul class="navBar" style="display: inline-block; padding: 0">
+			<li><a class="current" href="keyhunt.html">Landing page</a></li>
+			<li><a href="start.html">Getting Started</a></li>
+			<li><a href="help.html">Help</a></li>
+			<li><a href="guide.html">Key Pieces</a></li>
+			<li><a href="misc.html">Miscellaneous Oddities</a>
+				<ul class="navBar" style="padding-left: 15%; padding-right: 15%">
+					<li><a href="misc.html#gpb">GPB Dialog</a></li>
+					<li><a href="misc.html#mimics">Mimic Toppins</a></li>
+					<li><a href="misc.html#crustavo">Crustavo</a></li>
+					<li><a href="misc.html#baby">Baby Peppino</a></li>
+				</ul>
+			</li>
+		</ul>
     </body>
 </html>
