--- a/keyhunt/keyhunt.html
+++ b/keyhunt/keyhunt.html
@@ -7,7 +7,7 @@
   		<link rel="icon" type="image/x-icon" href="assets/favicon.png">
 	</head>
 
-	<body>
+	<body style="text-align: center;">
 		<h1>Scoutdigo Key Hunt Guide</h1>
 		<h2>Why?</h2>
 		<p>To put it simply: I got tired of repeating myself.</p>
@@ -22,14 +22,7 @@
 			<li><a href="start.html">Getting Started</a></li>
 			<li><a href="help.html">Help</a></li>
 			<li><a href="guide.html">Key Pieces</a></li>
-			<li><a href="misc.html">Miscellaneous Oddities</a>
-				<ul class="navBar" style="padding-left: 15%; padding-right: 15%">
-					<li><a href="misc.html#gpb">GPB Dialog</a></li>
-					<li><a href="misc.html#mimics">Mimic Toppins</a></li>
-					<li><a href="misc.html#crustavo">Crustavo</a></li>
-					<li><a href="misc.html#baby">Baby Peppino</a></li>
-				</ul>
-			</li>
+			<li><a href="misc.html">Miscellaneous Oddities</a></li>
 		</ul>
     </body>
 </html>
