--- a/keyhunt/keyhunt.html
+++ b/keyhunt/keyhunt.html
@@ -8,21 +8,22 @@
 	</head>
 
 	<body style="text-align: center;">
-		<h1>Scoutdigo Key Hunt Guide</h1>
-		<h2>Why?</h2>
-		<p>To put it simply: I got tired of repeating myself.</p>
-		<h1 style="margin-top: 128px; color: red">Read this. Seriously.</h1>
-		<p>You will probably have issues, and that's okay!</p>
-		<p>Struggling is part of the learning process.</p>
-		<p>However, to expedite that process I have included a help section, found <a href="help.html">here</a>.</p>
-		<p>Please, <span style="color: red; font-weight: 600; font-size: 150%; font-style: italic">please</span> read it before asking questions. The answer is probably there.</p>
-		<p>Now, without further ado, the updated guide:</p>
-		<ul class="navBar" style="display: inline-block; padding: 0">
-			<li><a class="current" href="keyhunt.html">Landing page</a></li>
-			<li><a href="start.html">Getting Started</a></li>
+		<ul class="navBar" style="align-content: left;">
+			<li><a href="keyhunt.html" class="current">Landing page</a></li>
+			<li><a href="guide.html">Keys</a></li>
 			<li><a href="help.html">Help</a></li>
-			<li><a href="guide.html">Key Pieces</a></li>
 			<li><a href="misc.html">Miscellaneous Oddities</a></li>
 		</ul>
+		
+		<div style="padding:20px; margin-top:20px;">
+			<h1>Scoutdigo Key Hunt Guide</h1>
+			<h2>Why?</h2>
+			<p>To put it simply: I got tired of repeating myself.</p>
+			<h1 style="margin-top: 128px; color: red">Read this. Seriously.</h1>
+			<p>You will probably have issues, and that's okay!</p>
+			<p>Struggling is part of the learning process.</p>
+			<p>However, to expedite that process I have included a help section, found <a href="help.html">here</a>.</p>
+			<p>Please, <span style="color: red; font-weight: 600; font-size: 150%; font-style: italic">please</span> read it before asking questions. The answer is probably there.</p>
+		</div>
     </body>
 </html>
