finished* guide and added 404
*still need the full video lmao

--- a/keyhunt/guide.html
+++ b/keyhunt/guide.html
@@ -159,15 +159,15 @@
 				<li>Super Jump into the ceiling before the first timed gate in the 6th room of Fast Food Saloon (“Big Long Weenie”).<br>
 				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/wmCy0LiA9f0" title="Key 36b" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe></li>
 				<li>In the Key room in The Ancient Cheese (“Explosive Personality”), Super Jump into the ceiling of the pocket with the 4 Small Toppings.<br>
-				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/3-6pU8y_XA4" title="Key 35" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe></li>
+				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/JGbTO-dex6w" title="Key 36c" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe></li>
 				<li>In the second room after the second key door in Meat Lover’s Mansion (“The Portrait Room”), cross the gap with the Fake Peppino arm and run into the ceiling.<br>
-				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/3-6pU8y_XA4" title="Key 35" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe></li>
+				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/owGPet-ckdA" title="Key 36d" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe></li>
 				<li>During Pizza Time in Gnome Forest, Super Jump up in the room before the exit right where the arrow sign is.<br>
-				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/3-6pU8y_XA4" title="Key 35" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe></li>
+				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/cTLCfVgcIo8" title="Key 36e" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe></li>
 				<li>In the third room of Champion’s Road (“All the Way Up”), run into the ceiling directly to the left of the Cheese Block in the Present tunnel.<br>
-				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/3-6pU8y_XA4" title="Key 35" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe></li>
+				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/ODci24FfZfg" title="Key 36f" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe></li>
 				<li>A new hint now appears in the credits. Run into the underside of the small overhang next to GPB. Afterwards, the last Key will spawn on top of the tower. Collect it and return to the Void Room for the finale.<br>
-				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/3-6pU8y_XA4" title="Key 35" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe></li>
+				<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/izvLgxItydA" title="Key 36g" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe></li>
 			</ol>
 		</div>
 	</body>
