--- a/keyhunt/keyhunt.html
+++ b/keyhunt/keyhunt.html
@@ -8,7 +8,7 @@
 	</head>
 
 	<body style="text-align: center;">
-		<ul class="navBar" style="align-content: left;">
+		<ul class="navBar">
 			<li><a href="keyhunt.html" class="current">Landing page</a></li>
 			<li><a href="guide.html">Keys</a></li>
 			<li><a href="help.html">Help</a></li>
