added help page
also added back button to 404 page

--- a/404.html
+++ b/404.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
-	you clicked the wrong link, fool!
+	<p>you clicked the wrong link, fool!</p>
+	<button onclick="history.back()">leave.</button>
 </body>
 </html>
