--- a/keyhunt/guide.html
+++ b/keyhunt/guide.html
@@ -45,7 +45,7 @@
 			<h3>Common Issues:</h3>
 			<ol>
 				<li>If no bullet is fired, enter a level and immediately exit.</li>
-				<li>If the door doesn't break, talk to GPB and verify you have the previous 5 Keys.</li>
+				<li>If the door doesn't break, talk to GPB in the <a href="help.html#void">Void Room</a> and verify you have the previous 5 Keys.</li>
 			</ol>
 			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/I6rlKE50CYA" title="Key 6" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 			<h2>Key 7</h2>
