--- a/keyhunt/keyhunt.html
+++ b/keyhunt/keyhunt.html
@@ -23,7 +23,7 @@
 			<p>You will probably have issues, and that's okay!</p>
 			<p>Struggling is part of the learning process.</p>
 			<p>However, to expedite that process I have included a help section, found <a href="help.html">here</a>.</p>
-			<p>Please, <span style="color: red; font-weight: 600; font-size: 150%; font-style: italic">please</span> read it before asking questions. The answer is probably there.</p>
+			<p>Please, <span class="important">please</span> read it before asking questions. The answer is probably there.</p>
 		</div>
     </body>
 </html>
