--- a/keyhunt/guide.html
+++ b/keyhunt/guide.html
@@ -13,6 +13,7 @@
 			<li><a href="guide.html" class="current">Keys</a></li>
 			<li><a href="help.html">Help</a></li>
 			<li><a href="misc.html">Miscellaneous Oddities</a></li>
+			<li><a href="v2.html">V2 Keys</a></li>
 		</ul>
 
 		<div style="padding:20px; margin-top:20px;">
