--- a/keyhunt/keyhunt.html
+++ b/keyhunt/keyhunt.html
@@ -13,12 +13,14 @@
 			<li><a href="guide.html">Keys</a></li>
 			<li><a href="help.html">Help</a></li>
 			<li><a href="misc.html">Miscellaneous Oddities</a></li>
+			<li><a href="v2.html">V2 Keys</a></li>
 		</ul>
 		
 		<div style="padding:20px; margin-top:20px;">
 			<h1>Scoutdigo Key Hunt Guide</h1>
 			<h2>Why?</h2>
 			<p>To put it simply: I got tired of repeating myself.</p>
+			<p>Welcome to the sneak peak, by the way.</p>
 			<h1 style="margin-top: 128px; color: red">Read this. Seriously.</h1>
 			<p>You will probably have issues, and that's okay!</p>
 			<p>Struggling is part of the learning process.</p>
