--- a/keyhunt/af23.html
+++ b/keyhunt/af23.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="keyhunt.css">
-		<title>what are you running from?</title>
-  		<link rel="icon" type="image/x-icon" href="assets/favicon.png">
+		<link rel="stylesheet" href="af23.css">
+		<title>you never learn, do you?</title>
+  		<link rel="icon" type="image/x-icon" href="assets/faviconscb.png">
 	</head>
 
 	<body>
@@ -12,8 +12,8 @@
 			<li><a href="keyhunt.html">Landing page</a></li>
 			<li><a href="guide.html">Keys</a></li>
 			<li><a href="help.html">Help</a></li>
-			<li><a href="misc.html">Miscellaneous Oddities</a></li>
-			<li><a href="v2.html" class="current">V2 Keys</a></li>
+			<li><a href="arg.html">ARG Findings</a></li>
+			<li><a href="v2.html" class="current">April Fools Keys</a></li>
 		</ul>
 
 		<div style="padding:20px; margin-top:20px;">
