--- a/keyhunt/arg.html
+++ b/keyhunt/arg.html
@@ -12,12 +12,13 @@
 			<li><a href="keyhunt.html">Landing page</a></li>
 			<li><a href="guide.html">Keys</a></li>
 			<li><a href="help.html">Help</a></li>
-			<li><a href="misc.html" class="current">Miscellaneous Oddities</a></li>
-			<li><a href="v2.html">V2 Keys</a></li>
+			<li><a href="arg.html" class="current">ARG Findings</a></li>
+			<li><a href="af23.html">April Fools Keys</a></li>
 		</ul>
 		
 		<div style="padding:20px; margin-top:20px;">
-			<h1 style="text-align: center;">Miscellaneous Oddities</h1>
+			<h1 style="text-align: center;">ARG Findings</h1>
+			<h2 style="text-align: center;">Documentation of things related to the Key Hunt</h2>
 			<h2>Mimic Toppins</h2>
 			<p>Mimics are a rare kind of Toppin that can appear at any time. Upon entering a room with a Toppin, there is a 2%* chance that the Toppin will become a mimic. Exiting and reentering the room will reset the Toppin and reroll the RNG. When a Toppin becomes a mimic, it has a 50% chance to play a distorted cry for help. Upon being collected, it will play the collect sound at 80% speed, and has a 50% chance to play a very loud sound. Mimic Toppins are entirely black, and retain the shape of whichever Toppin they replaced. Other than that, they function identically to normal Toppins and only serve to scare the player occasionally.</p>
 			<p>*When talking to GPB, he may mention the Mimics, stating that they are only there to harm you. This is misleading, as they do nothing other than jumpscare you. Reading this dialog will raise the chances of a Toppin becoming a Mimic to 50% until the next one spawns.</p>
