--- a/keyhunt/keyhunt.html
+++ b/keyhunt/keyhunt.html
@@ -12,8 +12,8 @@
 			<li><a href="keyhunt.html" class="current">Landing page</a></li>
 			<li><a href="guide.html">Keys</a></li>
 			<li><a href="help.html">Help</a></li>
-			<li><a href="misc.html">Miscellaneous Oddities</a></li>
-			<li><a href="v2.html">V2 Keys</a></li>
+			<li><a href="arg.html">ARG Findings</a></li>
+			<li><a href="af23.html">April Fools Keys</a></li>
 		</ul>
 		
 		<div style="padding:20px; margin-top:20px;">
