new 404 + full video embed

--- a/keyhunt/guide.html
+++ b/keyhunt/guide.html
@@ -17,8 +17,9 @@
 		</ul>
 
 		<div style="padding:20px; margin-top:20px;">
-			<h1>All Keys Video Guide (Coming Soon!)</h1>
+			<h1>All Keys Video Guide</h1>
 			<p>This video shows the location of every Key in order. If you want to use the original guide, or if you need help on a specific Key, it can be found below.</p>
+			<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/ImDuLN3pQFo" title="All Keys" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 			<h2>Key 1</h2>
 		  	<p>Mach Dash into the wall above the entrance to the Elevator room on Floor 1.</p>
 			<h3>Common Issues:</h3>
