--- a/404.html
+++ b/404.html
@@ -11,9 +11,13 @@
 		const head = document.getElementsByTagName("head")[0];
 		const body = document.getElementsByTagName("body")[0];
 		const messages =	[
-								["Error 404: you done screwed up", "you clicked the wrong link, fool!", "leave."]
+								["A Number 9 Large", "You clicked the wrong link, fool!", "Go Back"],
+								["look into the sky", "i see nothing\r\ni see so much of it", "leave\r\nleave"],
+//								["You Got Disk", "oh ah wwhoops!\r\ncontent files missing!", "sorry nothing"],
+								["Thank you Mario!", "But our webpage is in another castle!", "Push button B to select a world"],
+								["I'll steal it!", "That's it, I'm revoking your button privileges.", ""]
 							]
-		
+
 		const message = messages[Math.floor(Math.random() * messages.length)]
 
 		const title = document.createElement("title")
@@ -22,11 +26,14 @@
 
 		const msg = document.createElement("p")
 		msg.textContent = message[1]
+		msg.setAttribute("style", "white-space: pre;")
 		body.append(msg)
 
-		const btn = document.createElement("button")
-		btn.textContent = message[2]
-		btn.setAttribute("onclick", "history.back()")
-		body.append(btn)
+		if (message[2] !== "") {
+			const btn = document.createElement("button")
+			btn.textContent = message[2]
+			btn.setAttribute("onclick", "history.back()")
+			body.append(btn)
+		}
 	</script>
 </html>
