new af23 assets
also changed arg back to other

--- a/keyhunt/af23.html
+++ b/keyhunt/af23.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="af23.css">
-		<title>you never learn, do you?</title>
+		<title>when will you learn?</title>
   		<link rel="icon" type="image/x-icon" href="assets/faviconscb.png">
 	</head>
 
@@ -12,7 +12,7 @@
 			<li><a href="keyhunt.html">Landing page</a></li>
 			<li><a href="guide.html">Keys</a></li>
 			<li><a href="help.html">Help</a></li>
-			<li><a href="arg.html">ARG Findings</a></li>
+			<li><a href="other.html">Other Stuff</a></li>
 			<li><a href="v2.html" class="current">April Fools Keys</a></li>
 		</ul>
 
@@ -20,28 +20,28 @@
 			<h1>V2 All Keys Video Guide (Coming Soon!)</h1>
 			<p>This video shows the location of all 8 Keys in the April Fools 2023 build. If you need help on a specific Key, it can be found below.</p>
 			<h2>Key 1</h2>
-		  	<p>The fake key on Floor 1.</p>
+			<p>Super Jump into the ceiling above the Peppino Statue in the Entrance Hall.</p>
 			<iframe hidden width="560" height="315" src="https://www.youtube-nocookie.com/embed/vGQSddUHiZs" title="Key 1" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 			<h2>Key 2</h2>
-			<p>In the wall below Fun Farm.</p>
+			<p>You can break through the wall by the door to Floor 2. Continue in a winding pattern to access the previously fake Key.</p>
 			<iframe hidden width="560" height="315" src="https://www.youtube-nocookie.com/embed/GrYFBF_FuFc" title="Key 2" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 			<h2>Key 3</h2>
-			<p>somewhere on floor 2</p>
+			<p>Roll through the wall below Fun Farm.</p>
 			<iframe hidden width="560" height="315" src="https://www.youtube-nocookie.com/embed/WMeJlKWJbLQ" title="Key 3" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 			<h2>Key 4</h2>
 			<p>deep in a wall on floor 3</p>
 			<iframe hidden width="560" height="315" src="https://www.youtube-nocookie.com/embed/XenVascCgds" title="Key 4" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 			<h2>Key 5</h2>
-			<p>somewhere on floor 4?</p>
+			<p>Break into the ceiling to the left of Peppibot Factory.</p>
 			<iframe hidden width="560" height="315" src="https://www.youtube-nocookie.com/embed/aZeBpteuVBY" title="Key 5" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 			<h2>Key 6</h2>
-			<p>f5</p>
+			<p>Break through the floor beneath You bring a light?</p>
 			<iframe hidden width="560" height="315" src="https://www.youtube-nocookie.com/embed/I6rlKE50CYA" title="Key 6" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 			<h2>Key 7</h2>
-			<p>Enter the Green Room.</p>
+			<p>Enter and exit the Green Room. You'll collect it automatically.</p>
 			<iframe hidden width="560" height="315" src="https://www.youtube-nocookie.com/embed/ox7522mlfsQ" title="Key 7" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 			<h2>Key 8</h2>
-			<p>Floats around on the top of the tower.</p>
+			<p>Floats around randomly on the top of the tower.</p>
 			<iframe hidden width="560" height="315" src="https://www.youtube-nocookie.com/embed/UFpNLmRmoJY" title="Key 8" frameborder="0" allow="encrypted-media; picture-in-picture; web-share" allowfullscreen></iframe>
 			<h2>Silver Coneboy</h2>
 			<p>Leave the top of the tower and reenter. It will be snowy, and an entity known as Silver Coneboy will be there. Talking to him will present you with ominous dialog and will close the game, resetting your key progress. Nothing else happens from what I can tell.</p>
