--- a/keyhunt/other.html
+++ b/keyhunt/other.html
@@ -12,7 +12,7 @@
 			<li><a href="keyhunt.html">Landing page</a></li>
 			<li><a href="guide.html">Keys</a></li>
 			<li><a href="help.html">Help</a></li>
-			<li><a href="arg.html" class="current">ARG Findings</a></li>
+			<li><a href="other.html" class="current">Other Stuff</a></li>
 			<li><a href="af23.html">April Fools Keys</a></li>
 		</ul>
 		
