fixed a stray pixel
also made a mirror site for v2 and updated other.html but thats not as important

--- a/keyhunt/other.html
+++ b/keyhunt/other.html
@@ -13,19 +13,107 @@
 			<li><a href="guide.html">Keys</a></li>
 			<li><a href="help.html">Help</a></li>
 			<li><a href="other.html" class="current">Other Stuff</a></li>
-			<li><a href="af23.html">April Fools Keys</a></li>
+<!--		<li class="dropdown"> -->
+<!--			<a href="javascript:void(0)">Version</a> -->
+<!--			<div class="dropdown-content"> -->
+<!--				<a href="other.html" class="current">1.1</a> -->
+<!--				<a href="other-af23.html">April Fools</a> -->
+<!--			</div> -->
+			</li>
 		</ul>
 		
 		<div style="padding:20px; margin-top:20px;">
-			<h1 style="text-align: center;">ARG Findings</h1>
-			<h2 style="text-align: center;">Documentation of things related to the Key Hunt</h2>
+			<h1 style="text-align: center;">Other Stuff</h1>
 			<h2>Mimic Toppins</h2>
 			<p>Mimics are a rare kind of Toppin that can appear at any time. Upon entering a room with a Toppin, there is a 2%* chance that the Toppin will become a mimic. Exiting and reentering the room will reset the Toppin and reroll the RNG. When a Toppin becomes a mimic, it has a 50% chance to play a distorted cry for help. Upon being collected, it will play the collect sound at 80% speed, and has a 50% chance to play a very loud sound. Mimic Toppins are entirely black, and retain the shape of whichever Toppin they replaced. Other than that, they function identically to normal Toppins and only serve to scare the player occasionally.</p>
 			<p>*When talking to GPB, he may mention the Mimics, stating that they are only there to harm you. This is misleading, as they do nothing other than jumpscare you. Reading this dialog will raise the chances of a Toppin becoming a Mimic to 50% until the next one spawns.</p>
+			<h2>The Void Room</h2>
+			<audio controls>
+				<source src="assets/mu_pizzaboy.ogg" type="audio/ogg">
+			</audio>
 			<h2>GPB Dialog</h2>
-			<p>this will be a list at some point</p>
+			<ul style="font-size: 16px;">
+				<li>Standard Dialog:
+					<ol>
+						<li>... do you hear the squeal of the ones trapped in the box?<br>do you embrace their cries? do not.<br>for those are simply mimics aiming to harm you. avoid them...</li>
+						<li>and once out of that pearly gate, where do your belongings go?<br>all the delectable ingredients, the little plump critters...<br>is the white chasm you reside in even truly there?</li>
+						<li>you've escaped the crumbling tower before, haven't you?<br>and yet here you are again. and all you had worked for has been re-established with the blink of an eye.<br>this is the fate you deserve</li>
+					</ol>
+				</li>
+				<li style="padding-top: 24px">5+ Keys:<br>All previous dialog plus...
+					<ol>
+						<li>rooms such as this one, how many of them are there?<br>maybe you are not looking hard enough</li>
+						<li>the man with the rat... the man with the rat...<br>a bit too kindhearted, dont you think?<br>...and what about his cousin?</li>
+						<li>the locale, have you talked to them all?<br>they might know a new thing or two</li>
+						<li>someone in the roof<br>something ails them<br>come and see</li>
+						<li>a statue of yourself<br>what is there to commemorate<br>you bury your secrets deep down</li>
+					</ol>
+				</li>
+				<li style="padding-top: 24px">15+ Keys:<br>All previous dialog plus...
+					<ol>
+						<li>ha ha ha<br>do you see it?<br>it sees you</li>
+						<li>someone similar to you was looking around here<br>find him<br>he has something to show you</li>
+						<li>there was someone up above<br>perhaps an angel<br>it descended from the sky</li>
+						<li>the tower shifts beneath your feet<br>have you noticed</li>
+					</ol>
+				</li>
+				<li style="padding-top: 24px">25+ Keys:<br>All previous dialog plus...
+					<ol>
+						<li>you think you know everything<br>foolish</li>
+						<li>the floor beneath you... are you sure it's ever so stable?<br>are you moving around on your own<br>ever so sure that you conquered the tower?<br>...but have you ever wondered... has the tower conquered you instead?</li>
+						<li>... so proud, so sure, running through. breaking the fundaments and scavaging all you can...<br>are you even sure of what you are doing?<br>are you aware of what will happen?<br>such thought disturbs the others.</li>
+						<li>... and yet, after all was spoken, you came still.<br>you never let go. explored every corner. exhausted everything everyone could ever say.<br>was leaving ever even an option?</li>
+						<li>listen to the rumbling<br>this place is crashing and burning</li>
+					</ol>
+				</li>
+				<li style="padding-top: 24px">35+ Keys:
+					<ol>
+						<li>you are foolish. bumbling. lost.</li>
+						<li>just another hapless traveller flying too close to the sun.</li>
+						<li>i suggest you quit it while you're still ahead.</li>
+						<li>what do you think you are getting at?</li>
+						<li>your violent destruction and misfortune only angers the tower</li>
+						<li>can you hear it, then? the rumbling below your feet?</li>
+						<li>this will only end in dissapointment. do you understand?</li>
+						<li>at the end, there will be nothing. only me.</li>
+					</ol>
+				</li>
+				<li style="padding-top: 24px">After being talked to more than 6 times:
+					<ol>
+						<li>isnt there something you are forgetting?</li>
+						<li>are you lost?</li>
+						<li>where are you?</li>
+					</ol>
+				</li>
+				<li style="padding-top: 24px">After being talked to more than 6 times with 20+ Keys:
+					<ol>
+						<li>you do not know what you want</li>
+						<li>you are not welcome</li>
+						<li>...</li>
+						<li>i've been watching you</li>
+						<li>the others are not pleased</li>
+					</ol>
+				</li>
+			</ul>
 			<h2>Crustavo</h2>
-			<p>he says words ig</p>
+			<p>Crustavo exists solely to say vague and ominous things to scare the player. None of his dialog is actually relevant.</p>
+			<ul style="font-size: 16px;">
+				<li>Floor 1: I've been seeing more and more cracks around in this tower. This place has seen better days...</li>
+				<li>Floor 2: I was on the 5th floor and I thought I saw something hiding near a door. Havent been up there since...</li>
+				<li>Floor 3: Something crawled into the ground on the floor below us. You know anything about that?</li>
+				<li>Floor 4: My brother went missing in one of the secret hub rooms... the last I heard of him he was in some... art gallery?</li>
+				<li>Floor 4: That janitor knows more than he's letting on...</li>
+				<li>Floor 5: Boy, this floor is kind of spooky! I'm quaking in my tiny crust boots!</li>
+			</ul>
+			<p style="padding-top: 24px">His dialog in each location changes after you collect 25 Keys.</p>
+			<ul style="font-size: 16px;">
+				<li>Floor 1: I keep seeing more and more things crawling around here... it's freaking me out a little bit...</li>
+				<li>Floor 2: That thing on the 5th floor... I swear I keep seeing it... like it's following me...</li>
+				<li>Floor 3: I keep hearing voices whispering to me. Do you think I should see a doctor?</li>
+				<li>Floor 4: Aha... ahahah... I keep seeing things crawl in the corner of my eye and it's driving me crazy!</li>
+				<li>Floor 4: I swear I've seen that janitor guy doing shady stuff around here...</li>
+				<li>Floor 5: ...I wouldn't trust that tubby golden fellow if I were you...</li>
+			</ul>
 		</div>
     </body>
 </html>
