--- a/keyhunt/guide-af23.html
+++ b/keyhunt/guide-af23.html
@@ -9,11 +9,17 @@
 
 	<body>
 		<ul class="navBar">
-			<li><a href="keyhunt.html">Landing page</a></li>
-			<li><a href="guide.html">Keys</a></li>
-			<li><a href="help.html">Help</a></li>
-			<li><a href="other.html">Other Stuff</a></li>
-			<li><a href="v2.html" class="current">April Fools Keys</a></li>
+			<li><a href="keyhunt-af23.html">Landing page</a></li>
+			<li><a href="guide-af23.html" class="current">Keys</a></li>
+			<li><a href="help-af23.html">Help</a></li>
+			<li><a href="other-af23.html">Other Stuff</a></li>
+			<li class="dropdown">
+				<a href="javascript:void(0)">Version</a>
+				<div class="dropdown-content">
+					<a href="guide.html">1.1</a>
+					<a href="guide-af23.html" class="current">April Fools</a>
+				</div>
+			</li>
 		</ul>
 
 		<div style="padding:20px; margin-top:20px;">
