--- a/keyhunt/guide.html
+++ b/keyhunt/guide.html
@@ -13,7 +13,13 @@
 			<li><a href="guide.html" class="current">Keys</a></li>
 			<li><a href="help.html">Help</a></li>
 			<li><a href="other.html">Other Stuff</a></li>
-			<li><a href="af23.html">April Fools Keys</a></li>
+<!--		<li class="dropdown"> -->
+<!--			<a href="javascript:void(0)">Version</a> -->
+<!--			<div class="dropdown-content"> -->
+<!--				<a href="guide.html" class="current">1.1</a> -->
+<!--				<a href="guide-af23.html">April Fools</a> -->
+<!--			</div> -->
+			</li>
 		</ul>
 
 		<div style="padding:20px; margin-top:20px;">
