--- a/keyhunt/help-af23.html
+++ b/keyhunt/help-af23.html
@@ -2,23 +2,23 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="keyhunt.css">
-		<title>what are you running from?</title>
-  		<link rel="icon" type="image/x-icon" href="assets/favicon.png">
+		<link rel="stylesheet" href="af23.css">
+		<title>when will you learn?</title>
+  		<link rel="icon" type="image/x-icon" href="assets/faviconscb.png">
 	</head>
 
 	<body>
 		<ul class="navBar">
-			<li><a href="keyhunt.html">Landing page</a></li>
-			<li><a href="guide.html">Keys</a></li>
-			<li><a href="help.html" class="current">Help</a></li>
-			<li><a href="other.html">Other Stuff</a></li>
-<!--		<li class="dropdown"> -->
-<!--			<a href="javascript:void(0)">Version</a> -->
-<!--			<div class="dropdown-content"> -->
-<!--				<a href="help.html" class="current">1.1</a> -->
-<!--				<a href="help-af23.html">April Fools</a> -->
-<!--			</div> -->
+			<li><a href="keyhunt-af23.html">Landing page</a></li>
+			<li><a href="guide-af23.html">Keys</a></li>
+			<li><a href="help-af23.html" class="current">Help</a></li>
+			<li><a href="other-af23.html">Other Stuff</a></li>
+			<li class="dropdown">
+				<a href="javascript:void(0)">Version</a>
+				<div class="dropdown-content">
+					<a href="help.html">1.1</a>
+					<a href="help-af23.html" class="current">April Fools</a>
+				</div>
 			</li>
 		</ul>
 		
